php contact form

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+
   <!-- =======================================================
   * Template Name: MyResume - v4.2.0
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
@@ -549,6 +550,11 @@
         </div>
 
       </div>
+
+      <script src="fcf-assets/js/lang/fcf.en.js"></script>
+      <script src="fcf-assets/js/fcf.just-validate.min.js"></script>
+      <script src="fcf-assets/js/fcf.form.js"></script>
+      <!-- the lines above are needed -->
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
