--- a/index.html
+++ b/index.html
@@ -461,19 +461,19 @@
 
           </div>
 
-          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
+          <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://formspree.io/f/xeqvgalq" method="POST" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-controli" id="name" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-controli" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-controli" name="_replyto" id="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-controli" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-controli" name="_subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-controli" name="message" rows="5" placeholder="Message" required></textarea>
@@ -483,78 +483,12 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              <div class="text-center"><button type="submit" value="Send">Send Message</button></div>
             </form>
 
-          </div> -->
-
-          <!-- the lines below are needed -->
-    <div class="col-lg-8 mt-5 mt-lg-0">
-      <div class="fcf-body">
-          <div class="fcf-form-wrap">
-              <div id="fcf-form">
-                  <form class="fcf-form-class php-email-form" method="post" action="fcf-assets/fcf.process.php">
-                      <div class="row">
-                          <div class="fcf-field col-md-6 form-group">
-                              <div class="fcf-control">
-                                  <input type="text" name="Name" id="Name" class="fcf-input is-full-width form-controli" maxlength="60"
-                                      data-validate-field="Name" placeholder="Your Name">
-                              </div>
-                          </div>
-                          <div class="fcf-field col-md-6 form-group">
-                              <div class="fcf-control">
-                                  <input type="email" name="Email" id="Email" class="fcf-input is-full-width form-controli" maxlength="100"
-                                      data-validate-field="Email" placeholder="Your Email">
-                              </div>
-                          </div>
-                      </div>
-                      <div class="fcf-field mt-3 form-group">
-                          <div class="fcf-control">
-                              <input type="text" name="Phone" id="Phone" class="fcf-input is-full-width form-controli" maxlength="30"
-                                  data-validate-field="Phone" placeholder="Subject (Optional)">
-                          </div>
-                      </div>
-                      <div class="fcf-field mt-3 form-group">
-                          <div class="fcf-control">
-                              <textarea name="Message" id="Message" class="fcf-textarea form-controli" maxlength="3000" rows="5"
-                                  data-validate-field="Message" placeholder="Message"></textarea>
-                          </div>
-                      </div>
-                      <div class="my-3">
-                        <div class="loading">Loading</div>
-                        <div class="error-message"></div>
-                        <div class="sent-message">Your message has been sent. Thank you!</div>
-                      </div>
-                      <div id="fcf-status" class="fcf-status"></div>
-                      <div class="fcf-field">
-                          <div class="fcf-buttons text-center">
-                              <button id="fcf-button" type="submit" class="fcf-button is-link is-medium is-fullwidth">Send
-                                  Message</button>
-                          </div>
-                      </div>
-                      <!-- You MUST retain the attribution below
-                      <div class="fcf-attribution">Contact Form by <a href="https://www.freecontactform.com/"
-                              class="fcf-attribution-link">FreeContactForm</a></div> -->
-                  </form>
-              </div>
-              <div id="fcf-thank-you" style="display:none">
-                  <!-- Thank you message goes below -->
-                  <p>Thanks for contacting us, we will get back in touch with you soon.</p>
-                  <!-- Thank you message goes above -->
-              </div>
           </div>
-      </div>
-      </div>
-
-
         </div>
-
       </div>
-
-      <script src="fcf-assets/js/lang/fcf.en.js"></script>
-      <script src="fcf-assets/js/fcf.just-validate.min.js"></script>
-      <script src="fcf-assets/js/fcf.form.js"></script>
-      <!-- the lines above are needed -->
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
