--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-controli" name="_subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-controli" name="_subject" id="subject" placeholder="Subject">
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-controli" name="message" rows="5" placeholder="Message" required></textarea>
@@ -523,7 +523,7 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
