--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -36,7 +36,6 @@
 </head>
 
 <body>
-
   <main id="main">
 
     <!-- ======= Portfolio Details Section ======= -->
@@ -70,7 +69,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Context</strong>: Web design</li>
                 <li><strong>Client</strong>: ASU Company</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
