addded another portfolio item

--- a/api-idosos.html
+++ b/api-idosos.html
@@ -63,10 +63,9 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>First serious video production</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+                In the context of this school assignment, we visited the local elderly of our town at their "retired people's club" to talk about Loneliness in Old Age. We rented video equipment from our school, conducted the interviews/talks, and filmed some b-roll of the space. It was a very nurturing experience that culminated in us getting awarded the highest possible grade.              </p>
             </div>
           </div>
 
