--- a/xyts.html
+++ b/xyts.html
@@ -49,20 +49,16 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-1.png" alt="">
+                  <img src="assets/img/portfolio/xyts/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-2.png" alt="">
+                  <img src="assets/img/portfolio/xyts/portfolio-details-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-3.png" alt="">
+                  <img src="assets/img/portfolio/xyts/portfolio-details-3.jpg" alt="">
                 </div>
-
-                <!-- <div class="swiper-slide">
-                  <div style="padding:54.69% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/565384314?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="apresentacao final.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -73,16 +69,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Context</strong>: University Project</li>
-                <li><strong>Project date</strong>: 2020/2021</li>
-                <li><strong>Project URL</strong>: <a href="https://vamos-brincar.github.io/preview/">GitHub Pages</a>, <a href="https://vimeo.com/565384314">Presentation Video</a> </li>
+                <li><strong>Category</strong>: Streaming Overlay Design</li>
+                <li><strong>Context</strong>: Client</li>
+                <li><strong>Project date</strong>: May 2020</li>
+                <!-- <li><strong>Project URL</strong>: <a href=""></a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A website aimed at mobile</h2>
+              <h2>Streamer Pack</h2>
               <p>
-                Inside our group, I led the team responsible for the FrontEnd design that you can see here. We used <a href="https://startbootstrap.com/theme/freelancer" target="_blank">this template</a> as a starting point.
+                When a good friend of mine wanted to dabble into streaming on Twitch, he asked me to design an overly to make his stream look more professional. This wasn't my first time doing this, as I had done it for other friends and for myself. I'm glad to say he liked it!
               </p>
             </div>
           </div>
