--- a/data-dm.html
+++ b/data-dm.html
@@ -49,15 +49,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-1.png" alt="">
+                  <img src="assets/img/portfolio/data-dm/portfolio-details-1.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-2.png" alt="">
+                  <img src="assets/img/portfolio/data-dm/portfolio-details-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-3.png" alt="">
+                  <img src="assets/img/portfolio/data-dm/portfolio-details-3.jpg" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -73,16 +73,22 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: Data Mining for Data Science</li>
                 <li><strong>Context</strong>: University Project</li>
-                <li><strong>Project date</strong>: 2020/2021</li>
-                <li><strong>Project URL</strong>: <a href="https://vamos-brincar.github.io/preview/" target="_blank">GitHub Pages</a>, <a href="https://vimeo.com/565384314" target="_blank">Presentation Video</a> </li>
+                <li><strong>Project date</strong>: 2022</li>
+                <li><strong>Project info</strong>: The objective of this project was to analyze various statistics of the Cinema world, using data from IMdB.</li>
+                <li><strong>Project Report</strong>: <a href="https://drive.google.com/file/d/1gU3J9tbjF9II_N_HG3_MNoo6ufwW79a2/view" target="_blank">Full Project Report</a></li>
+                <li><strong>Project Grade</strong>: 15</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A website aimed at mobile</h2>
+              <h2>Building a Classification model using the R programming language and the package rminer</h2>
               <p>
-                Inside our group, I led the team responsible for the FrontEnd design that you can see here. We used <a href="https://startbootstrap.com/theme/freelancer" target="_blank">this template</a> as a starting point.
+                Even though this project was part of an optional subject, it was a great way to get familiarized with using R and R Studio to treat data and develop graphs. It was also a good introduction to the CRISP-DM methodology.
+              </p>
+              <h2>Technologies/Methodologies Used</h2>
+              <p>
+                R, Tidyverse, rminer, CRISP-DM.
               </p>
             </div>
           </div>
