--- a/data-nba.html
+++ b/data-nba.html
@@ -49,15 +49,15 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-1.png" alt="">
+                  <img src="assets/img/portfolio/data-nba/portfolio-details-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-2.png" alt="">
+                  <img src="assets/img/portfolio/data-nba/portfolio-details-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/dai-pwa/portfolio-details-3.png" alt="">
+                  <img src="assets/img/portfolio/data-nba/portfolio-details-3.png" alt="">
                 </div>
 
                 <!-- <div class="swiper-slide">
@@ -73,16 +73,21 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
+                <li><strong>Category</strong>: Data Science/Engineering</li>
                 <li><strong>Context</strong>: University Project</li>
-                <li><strong>Project date</strong>: 2020/2021</li>
-                <li><strong>Project URL</strong>: <a href="https://vamos-brincar.github.io/preview/" target="_blank">GitHub Pages</a>, <a href="https://vimeo.com/565384314" target="_blank">Presentation Video</a> </li>
+                <li><strong>Project date</strong>: 2021</li>
+                <li><strong>Project info</strong>: The objective of this project was to analyze various statistics of the NBA.</li>
+                <li><strong>Project Grade</strong>: 17</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>A website aimed at mobile</h2>
+              <h2>The influence of physical attributes in an NBA player's performance</h2>
               <p>
-                Inside our group, I led the team responsible for the FrontEnd design that you can see here. We used <a href="https://startbootstrap.com/theme/freelancer" target="_blank">this template</a> as a starting point.
+                This was the analytical question I was tasked with answering. Me and another group-mate mainly used data from official sources to develop the Bronze, Silver and Gold layers. To complete the data pipeline, we also used Tableau to create the dashboards in the pictures.
+              </p>
+              <h2>Technologies Used</h2>
+              <p>
+                HDFS, PySpark, Delta Lake and Tableau.
               </p>
             </div>
           </div>
