--- a/index.html
+++ b/index.html
@@ -85,15 +85,14 @@
       <h1>Nuno <span class="text-blue"> Moreira </span> </h1>
        <!-- <p>I'm <span class="typed" data-typed-items="Designer, Developer, Freelancer, Photographer"></span></p> --> 
         <div class="subheading mb-5">
-          <a class="text-silver">Student · Guimarães · </a>
+          <a class="text-silver">Student · Guimarães, Portugal · </a>
           <a class="text-blue2" href="mailto:nunomoreirac@gmail.com">nunomoreirac@gmail.com</a>
         </div>
       <p class="lead mb-5"> Hi! I'm a 20 year old student from Portugal. I just finished my degree on Engineering and Management of Information Systems at University of Minho and am now enrolling in a master's in Engineering of Information Systems. I'm currently looking for an intership in fields such as Data or Software Engineering.</p>
       <div class="social-links">
-        <a href="https://twitter.com/nunomzz" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/nunodoesitall/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/nunomm22/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/nuno-moreira-95b52818a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/nunodoesitall/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://github.com/nunomz" class="github"><i class="bx bxl-github" target="_blank"></i></a>
+        <a href="https://www.linkedin.com/in/nuno-moreira-95b52818a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
 
@@ -529,10 +528,9 @@
       <h3>Nuno Moreira</h3>
       <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p> -->
       <div class="social-links">
-        <a href="https://twitter.com/nunomzz" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="https://www.facebook.com/nunodoesitall/" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="https://www.instagram.com/nunomm22/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/nuno-moreira-95b52818a/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/nunodoesitall/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://github.com/nunomz" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/nuno-moreira-95b52818a/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
       </div>
       <!-- <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
