--- a/index.html
+++ b/index.html
@@ -324,15 +324,15 @@
               </ul>
             </div>
             <div class="resume-item">
-              <!-- <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
+              <h4>Video Editor @ soundscout.pt</h4>
+              <h5>May 2022 - Now</h5>
+              <p><em>Remote</em></p>
+              <!--<ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
                 <li>Recommended and consulted with clients on the most appropriate graphic design</li>
                 <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul> -->
+              </ul>-->
             </div>
           </div>
         </div>
