--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <ul class="navbar-nav">
             <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li> -->
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Education</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#resume">Resume</a></li>
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
             <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li> -->
             <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+            <li class="nav-item"><a class="nav-link js-scroll-trigger" href="cv.html">Curriculum vitæ</a></li>
             <li class="nav-item">
               <div class="dropdown" $dropdown-bg: $black;>
                 <a class="nav-link js-scroll-trigger dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
