added sound mag to portfolio

--- a/index.html
+++ b/index.html
@@ -452,6 +452,30 @@
             </a>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-video">
+            <a href="sound-ganso.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/sound-ganso.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Video Project for Sound Magazine</h4>
+                  <p>"Ganso" Video Interview</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-video">
+            <a href="sound-fausto.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details">
+              <div class="portfolio-wrap">
+                <img src="assets/img/portfolio/sound-fausto.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Video Project for Sound Magazine</h4>
+                  <p>"Capitão Fausto" Video Interview</p>
+                </div>
+              </div>
+            </a>
+          </div>
+
         </div>
       </div>
     </section>
