--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a class="text-silver">Student · Guimarães, Portugal · </a>
           <a class="text-blue2" href="mailto:nunomoreirac@gmail.com">nunomoreirac@gmail.com</a>
         </div>
-      <p class="lead mb-5"> Hi! I'm a 20 year old student from Portugal. I just finished my degree on Engineering and Management of Information Systems at University of Minho and am now enrolling in a master's in Engineering of Information Systems. I'm currently looking for an intership in fields such as Data or Software Engineering.</p>
+      <p class="lead mb-5"> Hi! I'm a 21 year old student from Portugal. I have a degree in Engineering and Management of Information Systems at the University of Minho and am now the last year of a master's in Engineering of Information Systems. I'm currently working as a System Administrator at DigitalSign.</p>
       <div class="social-links">
         <a href="https://www.facebook.com/nunodoesitall/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://github.com/nunomz" class="github"><i class="bx bxl-github" target="_blank"></i></a>
@@ -161,13 +161,12 @@
     </section>
      End About Section -->
 
-    <!-- ======= Skills Section ======= -->
+    <!-- ======= Skills Section ======= 
     <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Skills</h2>
-          <!--<p style="opacity: 0.5;">NOTE: These percentages don't necessarily quantify how good I am with these programming languages and technologies, but instead how comfortable I am with using them and how willing I am to go the extra mile to educate myself</p>-->
         </div>
 
         <div class="row">
@@ -276,7 +275,7 @@
 
       <p style="opacity: 0.5;">NOTE: These percentages don't necessarily quantify how good I am with these programming languages and technologies, but instead how comfortable I am with using them.</p>
     
-    </section><!-- End Skills Section -->
+    </section> End Skills Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -304,36 +303,41 @@
               <h4>Degree in Engineering and Management of Information Systems</h4>
               <h5>2019 - 2022</h5>
               <p><em>University of Minho</em></p>
-<!--               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
- -->            </div>
+              <ul>
+                <li>Learned subjects such as Data Engineering, Web Development and Distributed Systems</li>
+                <li>Acted as project manager for a university subject consulting simulation, achieving the highest grade in the course</li>
+              </ul>
+              </div>
             <div class="resume-item">
               <h4>Masters in Engineering of Information Systems</h4>
-              <h5>2022 - 2024</h5>
+              <h5>2022 - Now</h5>
               <p><em>University of Minho</em></p>
-<!--               <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
- -->            </div>
+              <ul>
+                <li>Learned subjects such as IT Infrastructure, IS Security Engineering and Artificial Intelligence</li>
+                <li>Currently developing my master's thesis</li>
+              </ul>
+            </div>
           </div>
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Item packaging worker</h4>
-              <h5>2021</h5>
-              <p><em>Guimarães, PT</em></p>
-              <ul>
-                <li>While outside of the tech space, this summer job at a clothing factory was a great introduction to the job world.</li>
-                <li>I learned to work under a tight schedule and to deal with co-workers.</li>
-              </ul>
-            </div>
-            <div class="resume-item">
               <h4>Video Editor @ soundscout.pt</h4>
               <h5>May 2022 - Now</h5>
               <p><em>Remote</em></p>
-              <!--<ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>-->
+              <ul>
+                <li>Freelance video editing for a renowned music maganize in Portugal</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Systems Administrator @ DigitalSign</h4>
+              <h5>Jan 2023 - Now</h5>
+              <p><em>Guimarães, PT</em></p>
+              <ul>
+                <li>Physical and virtual Infrastructure management and monitoring</li>
+                <li>Helpdesk support and technical troubleshooting</li>
+                <li>Implemented a new company-wide knowledge base using Wiki.JS and PostgreSQL running on Docker</li>
+                <li><b>Technologies</b>: Linux, Docker, Zabbix, Ansible, Kubernetes</li>
+              </ul>
             </div>
           </div>
         </div>
